add jacoco report to reactor build